@startuml

title __UI's Class Diagram__\n

  package  {
    package mooc.ui {
      class mooc.logic.Main {
          {static} + main()
      }
    }
  }
  

  package  {
    package mooc.ui {
      class TextUserInterface {
          + TextUserInterface()
          + update()
      }
    }
  }
  

  package  {
    package mooc.ui {
      interface UserInterface {
          {abstract} + update()
      }
    }
  }
  

  TextUserInterface -up-|> UserInterface
  TextUserInterface o-- TextUserInterface : textUI
  TextUserInterface o-- UserInterface : ui


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
